# fbc_uploader

./: .dockerignore  .gitignore  API.md  Dockerfile  LICENSE  README.md  alembic.ini  metadata.md  pyproject.toml
.github/workflows/: build-pr.yml  delete-builds.yml  main.yml
backend/: __init__.py  main.py
backend/app/: cleanup.py  cli.py  config.py  db.py  embed_preview.py  main.py  metadata_schema.py  migrate.py  models.py  postprocessing.py  proxy_headers.py  schemas.py  security.py  subtitles.py  utils.py
backend/app/routers/: __init__.py  admin.py  metadata.py  notice.py  tokens.py  uploads.py
backend/app/templates/: share_preview.html
backend/migrations/: env.py
backend/migrations/versions/: 5dc14b681055_initial.py  cbb603dd8b0b_add_public_id_to_uploads.py
backend/tests/: conftest.py  test_admin.py  test_advanced.py  test_cleanup.py  test_download_restrictions.py  test_download_url_security.py  test_faststart.py  test_metadata.py  test_mimetype_validation.py  test_postprocessing.py  test_proxy_headers.py  test_share_view.py  test_stream_file.py  test_subtitles.py  test_temp_paths.py  test_token_generation.py  test_token_status.py  test_tokens.py  test_tus_checksum.py  test_tus_token_validation.py  test_upload_cancel.py  test_upload_errors.py  test_upload_flow.py  utils.py
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/app/: spa-loading-template.html
frontend/app/components/: AdminTokenForm.vue  AdminTokensTable.vue  AdminUploadsTable.vue  Markdown.vue  MetadataFields.vue  ShareVideoPlayer.vue  TokenSummary.vue  UploadSlotCard.vue  UploadsTable.vue
frontend/app/composables/: useMetadata.ts  useMetadataParser.ts  useShareMediaVolume.ts  useSharePlayerShortcuts.ts  useShareShortcutHelp.ts  useShareSubtitles.ts  useTokenInfo.ts  useTusUpload.ts  useUploadPolling.ts  useUploadSlots.ts
frontend/app/layouts/: default.vue
frontend/app/middleware/: admin.ts
frontend/app/pages/: index.vue
frontend/app/plugins/: api.client.ts
frontend/app/types/: token.ts  (+4 more)
tools/: fbc_extractor.py
tools/client/: README.md  api.go  build.sh  cancel.go  client_test.go  config.go  create.go  download.go  go.mod  helpers.go  info.go  main.go  size.go  time.go  types.go  upload.go
(+18 files in other folders)
