[project]
name = "fbc-uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.19",
    "httpx>=0.28.1",
    "typer>=0.12.5",
    "aiosqlite>=0.22.0",
    "aiofiles>=24.1.0",
    "alembic>=1.13.3",
    "python-magic>=0.4.27",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.14.10"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend/"]
testpaths = ["backend/tests"]
addopts = "-v --tb=short"
filterwarnings = []

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "backend/migrations/versions",
]

line-length = 140
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
per-file-ignores = { "test_*.py" = [
    "ALL",
], "migrations/versions/*.py" = [
    "ALL",
] }
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D200",
    "D205",
    "D211",
    "FBT003",
    "PLC0415",
    "COM812",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "S101",
    "S104",
    "INP001",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN401",
    "ARG001",
    "LOG015",
    "BLE001",
    "B904",
    "TRY301",
    "PGH003",
    "PYI063",
    "D212",
    "D203",
    "SIM300",
    "PLR2004",
    "E402",
    "SLF001",
    "FBT001",
    "FBT002",
    "PLR0915"
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
